fix planet free title

--- a/planet-free.html
+++ b/planet-free.html
@@ -54,7 +54,7 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>Plastic Heroes</h2>
+					<h2>Planet Free</h2>
 					<p>An augmented reality location-based mobile game.</p>
 					<!--<p>A fast paced FPS Roguelite in a kid’s imaginative world</p>-->
 				</header>
