Small tweaks to ph and pf projects

--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -158,10 +158,11 @@
 								<section>
 									<h3>Videos</h3>
 									<div class="video embed fit">
-										<iframe src="images/projects/plasticheroes/Gameplay-Footage-Compressed.mp4"
+										<!-- <iframe src="images/projects/plasticheroes/Gameplay-Footage-Compressed.mp4"
 											width="560" height="315" frameborder="0" 
 											allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture>" allowfullscreen>
-										</iframe>
+										</iframe> -->
+										<video src="images/projects/plasticheroes/Gameplay-Footage-Compressed.mp4" loop controls></video>
 									</div>
 									<!-- <div class="video embed fit"> -->
 										<!-- <video src="images/projects/plasticheroes/" loop controls></video> -->
