Update main projects front page previews

--- a/planet-free.html
+++ b/planet-free.html
@@ -256,6 +256,7 @@
 										src="images/projects/planetfree/rescue_screenshot.png" alt=""
 										loading="lazy" /></a>
 							</article>
+							<!--
 							<article class="from-left">
 								<a href="images/projects/planetfree/krabbaka.png" class="image2"><img
 										src="images/projects/planetfree/krabbaka.png" alt="" loading="lazy" /></a>
@@ -267,14 +268,14 @@
 							<article class="from-left">
 								<a href="images/projects/planetfree/fnac_quest.png" class="image2"><img
 										src="images/projects/planetfree/fnac_quest.png" alt="" loading="lazy" /></a>
-							</article>
+							</article> -->
 							<!--Squares-->
 
 							<article class="from-left">
 								<a href="images/projects/planetfree/rewards-wizink.gif" class="image2"><img
 										src="images/projects/planetfree/rewards-wizink.gif" alt="" loading="lazy" /></a>
 							</article>
-							<article class="from-left">
+							<!--<article class="from-left">
 								<a href="images/projects/planetfree/rewards-skoda.gif" class="image2"><img
 										src="images/projects/planetfree/rewards-skoda.gif" alt="" loading="lazy" /></a>
 							</article>
@@ -282,16 +283,16 @@
 							<article class="from-left">
 								<a href="images/projects/planetfree/rewards-ola.gif" class="image2"><img
 										src="images/projects/planetfree/rewards-ola.gif" alt="" loading="lazy" /></a>
-							</article>
+							</article>-->
 							<article class="from-left">
 								<a href="images/projects/planetfree/rewards-ps5.jpg" class="image2"><img
 										src="images/projects/planetfree/rewards-ps5.jpg" alt="" loading="lazy" /></a>
 							</article>
-							<article class="from-left">
+							<!--<article class="from-left">
 								<a href="images/projects/planetfree/skoda_brandspot.png" class="image2"><img
 										src="images/projects/planetfree/skoda_brandspot.png" alt=""
 										loading="lazy" /></a>
-							</article>
+							</article>-->
 							<!-- <article class="from-left">
 							<a href="images/projects/planetfree/Header.png" class="image2"><img
 									src="images/projects/planetfree/Header.png" alt="" loading="lazy" /></a>
