--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -101,7 +101,7 @@
 								</li>
 								<li>General Programming
 									<p> I am also a generalist programmer that works on UI systems, tools and any other 
-										project necessity.
+										project necessities.
 									</p>
 								</li>
 								<li>Game Design
