--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
 			</div>
 		</section>
 		<!-- 3.1 - Plastic Heroes -->
-		<section class="spotlight small style2 right">
-			<span class="image fit main"><img src="images/projects/plasticheroes/HUB.png" alt="" /></span>
+		<section class="spotlight small style2 left">
+			<span class="image fit main"><img src="images/projects/plasticheroes/gameplay-optimized.gif" alt="" /></span>
+			<!-- <div class="video embed fit"><video src="images/projects/plasticheroes/Gameplay-Footage-Compressed.mp4"></video></div> -->
 			<div class="content">
 				<header>
 					<h2>Plastic Heroes</h2>
@@ -235,8 +236,8 @@
 			<a href="#other" class="goto-next scrolly">Next</a>
 		</section>
 		<!-- 3.2 - PLANET FREE -->
-		<section class="spotlight small style1 left">
-			<span class="image fit main"><img src="images/projects/planetfree/pf-banner-slim.jpg" alt="" /></span>
+		<section class="spotlight small style1 right">
+			<span class="image fit main"><img src="images/projects/planetfree/pf-banner-3.jpg" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>Planet Free</h2>
