--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 		</section>
 		<!-- 3.1 - Plastic Heroes -->
 		<section class="spotlight small style2 left">
-			<span class="image fit main"><img src="images/projects/plasticheroes/gameplay-optimized.gif" alt="" /></span>
+			<span class="image fit main"><img src="images/projects/plasticheroes/gameplay-optimized.gif" alt="" 
+				loading="lazy"/></span>
 			<!-- <div class="video embed fit"><video src="images/projects/plasticheroes/Gameplay-Footage-Compressed.mp4"></video></div> -->
 			<div class="content">
 				<header>
@@ -237,7 +238,8 @@
 		</section>
 		<!-- 3.2 - PLANET FREE -->
 		<section class="spotlight small style1 right">
-			<span class="image fit main"><img src="images/projects/planetfree/pf-banner-3.jpg" alt="" /></span>
+			<span class="image fit main"><img src="images/projects/planetfree/pf-banner-3.jpg" alt="" 
+				loading="lazy"/></span>
 			<div class="content">
 				<header>
 					<h2>Planet Free</h2>
